@@ -18,16 +18,6 @@
 
 package org.apache.hadoop.chukwa.datacollection.writer;
 
-import java.util.List;
-
-import org.apache.hadoop.chukwa.Chunk;
-import org.apache.hadoop.conf.Configuration;
-
-public interface ChukwaWriter
-{
-	public void init(Configuration c) throws WriterException;
-	public void add(Chunk data) throws WriterException;
-	public void add(List<Chunk> chunks) throws WriterException;
-	public void close() throws WriterException;;
-
+public interface PipelineableWriter extends ChukwaWriter{
+	public void setNextStage(ChukwaWriter next);
 }
